# alogate

./: .gitignore  rustfmt.toml
back/: Cargo.toml  target  tauri.conf.json
back/src/: lib.rs  loader.rs  main.rs  simulate.rs  utils.rs
back/src/loader/decl/: mod.rs  package.rs
back/src/loader/decl-src/: package.stomd
back/src/simulate/: gates.rs  simulation.rs  simulators.rs
back/src/utils/: cell_collection.rs
scripts/: gen-decl
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: main.ts
