[package]
name = "alogate"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "alogate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["config-json5"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structom-codegen = "0.1.1"
structom = "0.1.3"
thiserror = "2.0.17"

[profile.dev]
incremental = true
debug = "line-tables-only"
strip = "symbols"

[profile.release]
opt-level = 3
panic = "abort"
lto = "thin"
overflow-checks = false
strip = true
debug = false
