[package]
name = "alogate"
version = "0.1.0"
description = "A Tauri App"
authors = ["me"]
edition = "2024"

[lib]
name = "alogate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
structom-codegen = "0.1.5"

[dependencies]
tauri = { version = "2.9.5", features = ["config-json5"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structom = "0.1.5"
thiserror = "2.0.17"

[profile.dev]
incremental = true
debug = "line-tables-only"
strip = "symbols"

[profile.release]
opt-level = 3
panic = "abort"
lto = "thin"
overflow-checks = false
strip = true
debug = false
